daemon/controllers: re-create KWinDisplayBrightness when the label changes

libkscreen re-uses output objects when their ID is the same, even if the
underlying data (like the EDID) is different. Usually that's not a problem,
but in some cases it resulted in the label not updating when the hardware
changed. To fix it, just re-create the KWinDisplayBrightness object when the
label would be different.

BUG: 495223